added visual changes on front end; moved text; removed text; added move type image

--- a/web/reader.html
+++ b/web/reader.html
@@ -139,42 +139,48 @@
                                 <table class="table-borderless" style="margin: 0 auto;width: 100%;text-align: center;">
                                     <tbody>
                                         <tr>
-                                            <td style="text-align:center">Quick</td>
-                                            <td>
+                                            <td colspan="2">
                                                 <select id="quick_move-slot1" name="quick_move-slot1" class="custom-select">
-                                                    <option>-- Selecione  --</option>
+                                                    <option>-- Quick  --</option>
                                                 </select>
                                             </td>
                                         </tr>
                                         <tr style="font-size: 0.7em;" >
+                                            <td rowspan="2" id="quick_move_type-slot1" class="move_type_image_icon">
+
+                                            </td>
                                             <td id="quick_goodAgainst-slot1" class="goodAgainst" colspan="2"></td>
                                         </tr>
                                         <tr style="font-size: 0.7em;" >
                                             <td id="quick_weakAgainst-slot1" class="weakAgainst" colspan="2"></td>
                                         </tr>
                                         <tr>
-                                            <td style="text-align:center">Charge I</td>
-                                            <td>
+                                            <td colspan="2">
                                                 <select id="charge1_move-slot1" name="charge1_move-slot1" class="custom-select">
-                                                    <option>-- Selecione  --</option>
+                                                    <option>-- Charge I  --</option>
                                                 </select>
                                             </td>
                                         </tr>
                                         <tr style="font-size: 0.7em;" >
+                                            <td rowspan="2" id="charge1_move_type-slot1" class="move_type_image_icon">
+
+                                            </td>
                                             <td id="charge1_goodAgainst-slot1" class="goodAgainst" colspan="2"></td>
                                         </tr>
                                         <tr style="font-size: 0.7em;" >
                                             <td id="charge1_weakAgainst-slot1" class="weakAgainst" colspan="2"></td>
                                         </tr>
                                         <tr>
-                                            <td style="text-align:center">Charge II</td>
-                                            <td>
+                                            <td colspan="2">
                                                 <select id="charge2_move-slot1" name="charge2_move-slot1" class="custom-select">
-                                                    <option>-- Selecione  --</option>
+                                                    <option>-- Charge II  --</option>
                                                 </select>
                                             </td>
                                         </tr>
                                         <tr style="font-size: 0.7em;" >
+                                            <td rowspan="2" id="charge2_move_type-slot1" class="move_type_image_icon">
+
+                                            </td>
                                             <td id="charge2_goodAgainst-slot1" class="goodAgainst" colspan="2"></td>
                                         </tr>
                                         <tr style="font-size: 0.7em;" >
@@ -224,42 +230,48 @@
                                 <table class="table-borderless" style="margin: 0 auto;width: 100%;text-align: center;">
                                     <tbody>
                                     <tr>
-                                        <td style="text-align:center">Quick</td>
-                                        <td>
+                                        <td colspan="2">
                                             <select id="quick_move-slot2" name="quick_move-slot2" class="custom-select">
-                                                <option>-- Selecione  --</option>
+                                                <option>-- Quick  --</option>
                                             </select>
                                         </td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
+                                        <td rowspan="2" id="quick_move_type-slot2" class="move_type_image_icon">
+
+                                        </td>
                                         <td id="quick_goodAgainst-slot2" class="goodAgainst" colspan="2"></td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
                                         <td id="quick_weakAgainst-slot2" class="weakAgainst" colspan="2"></td>
                                     </tr>
                                     <tr>
-                                        <td style="text-align:center">Charge I</td>
-                                        <td>
+                                        <td colspan="2">
                                             <select id="charge1_move-slot2" name="charge1_move-slot2" class="custom-select">
-                                                <option>-- Selecione  --</option>
+                                                <option>-- Charge I  --</option>
                                             </select>
                                         </td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
+                                        <td rowspan="2" id="charge1_move_type-slot2" class="move_type_image_icon">
+
+                                        </td>
                                         <td id="charge1_goodAgainst-slot2" class="goodAgainst" colspan="2"></td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
                                         <td id="charge1_weakAgainst-slot2" class="weakAgainst" colspan="2"></td>
                                     </tr>
                                     <tr>
-                                        <td style="text-align:center">Charge II</td>
-                                        <td>
+                                        <td colspan="2">
                                             <select id="charge2_move-slot2" name="charge2_move-slot2" class="custom-select">
-                                                <option>-- Selecione  --</option>
+                                                <option>-- Charge II  --</option>
                                             </select>
                                         </td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
+                                        <td rowspan="2" id="charge2_move_type-slot2" class="move_type_image_icon">
+
+                                        </td>
                                         <td id="charge2_goodAgainst-slot2" class="goodAgainst" colspan="2"></td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
@@ -309,42 +321,48 @@
                                 <table class="table-borderless" style="margin: 0 auto;width: 100%;text-align: center;">
                                     <tbody>
                                     <tr>
-                                        <td style="text-align:center">Quick</td>
-                                        <td>
+                                        <td colspan="2">
                                             <select id="quick_move-slot3" name="quick_move-slot3" class="custom-select">
-                                                <option>-- Selecione  --</option>
+                                                <option>-- Quick  --</option>
                                             </select>
                                         </td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
+                                        <td rowspan="2" id="quick_move_type-slot3" class="move_type_image_icon">
+
+                                        </td>
                                         <td id="quick_goodAgainst-slot3" class="goodAgainst" colspan="2"></td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
                                         <td id="quick_weakAgainst-slot3" class="weakAgainst" colspan="2"></td>
                                     </tr>
                                     <tr>
-                                        <td style="text-align:center">Charge I</td>
-                                        <td>
+                                        <td colspan="2">
                                             <select id="charge1_move-slot3" name="charge1_move-slot3" class="custom-select">
-                                                <option>-- Selecione  --</option>
+                                                <option>-- Charge I  --</option>
                                             </select>
                                         </td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
+                                        <td rowspan="2" id="charge1_move_type-slot3" class="move_type_image_icon">
+
+                                        </td>
                                         <td id="charge1_goodAgainst-slot3" class="goodAgainst" colspan="2"></td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
                                         <td id="charge1_weakAgainst-slot3" class="weakAgainst" colspan="2"></td>
                                     </tr>
                                     <tr>
-                                        <td style="text-align:center">Charge II</td>
-                                        <td>
+                                        <td colspan="2">
                                             <select id="charge2_move-slot3" name="charge2_move-slot3" class="custom-select">
-                                                <option>-- Selecione  --</option>
+                                                <option>-- Charge II  --</option>
                                             </select>
                                         </td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
+                                        <td rowspan="2" id="charge2_move_type-slot3" class="move_type_image_icon">
+
+                                        </td>
                                         <td id="charge2_goodAgainst-slot3" class="goodAgainst" colspan="2"></td>
                                     </tr>
                                     <tr style="font-size: 0.7em;" >
