--- a/web/reader.html
+++ b/web/reader.html
@@ -86,7 +86,10 @@
                             Navegação
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="json_update">Atualizar arquivos JSONs</a>
+                            <a class="dropdown-item" href="jsonUpdate">Atualizar arquivos JSONs</a>
+                            <a class="dropdown-item" href="jsBuilderPokeData">Gerar arquivos da versão Lite - PokeDB</a>
+                            <a class="dropdown-item" href="jsBuilderQuick">Gerar arquivos da versão Lite - Quick Moves</a>
+                            <a class="dropdown-item" href="jsBuilderCharge">Gerar arquivos da versão Lite - Charge Moves</a>
                             <!-- <div class="dropdown-divider"></div> -->
                         </div>
                     </li>
