js refctoring; image url refactoring; dynamic form listing and necessary changes

--- a/web/reader.html
+++ b/web/reader.html
@@ -11,6 +11,7 @@
 
         <script src="../includes/js/jquery.js"></script>
         <script src="../includes/js/misc.js"></script>
+        <script src="../includes/js/pokedata.js"></script>
         <script src="../includes/js/pve.js"></script>
         <script src="../includes/js/pvp_team_manager.js"></script>
         <script>
