--- a/web/reader.html
+++ b/web/reader.html
@@ -401,9 +401,9 @@
 
                     <div class="tab-pane fade show" id="pvp-teamassembler" role="tabpanel" >
 
-                        <textarea class="pkm-list"></textarea>
+                        <textarea class="pkm-list" style="height: 252px; width:50em;"></textarea>
 
-                        <p><br><button type="button" class="btn btn-sm btn-primary pkm-list-btn">Create Teams</button></p>
+                        <p><br><button type="button" class="btn btn-sm btn-primary pkm-list-btn">Create Teams</button></p><br>
 
                         <table class='teamassembler-table table table-sm table-striped'>
                             <thead class="thead-dark">
