added basic filtering

--- a/web/reader.html
+++ b/web/reader.html
@@ -405,6 +405,10 @@
 
                         <p><br><button type="button" class="btn btn-sm btn-primary pkm-list-btn">Create Teams</button></p><br>
 
+                        <p><input type="text" id="filter-pvp-team"/></p><br>
+
+                        <p><button type="button" class="btn btn-sm btn-primary filter-pkm-list-btn">Filter</button></p><br>
+
                         <table class='teamassembler-table table table-sm table-striped'>
                             <thead class="thead-dark">
                                 <tr>
