--- a/web/reader.html
+++ b/web/reader.html
@@ -105,9 +105,13 @@
                         <a class="nav-link active" id="pvp-teambuilder-tab" data-toggle="tab" href="#pvp-teambuilder" role="tab" aria-controls="home"
                            aria-selected="true">PVP Team Builder</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item hide">
                         <a class="nav-link" id="pvp-teamassembler-tab" data-toggle="tab" href="#pvp-teamassembler" role="tab" aria-controls="home"
                            aria-selected="false">PVP Team Assembler</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="fe-manager-tab" data-toggle="tab" href="#fe-manager" role="tab" aria-controls="home"
+                           aria-selected="false">Front End Manager</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="pkm-pvp-tab" data-toggle="tab" href="#pkm-pvp" role="tab" aria-controls="home"
@@ -122,6 +126,7 @@
                 <br><br>
 
                 <div class="tab-content">
+
                     <div class="tab-pane fade show active" id="pvp-teambuilder" role="tabpanel" >
 
                         <div class="card" style="width: 33%; float: left"> <!-- Slot 1 -->
@@ -427,14 +432,15 @@
 
                     </div>
 
+                    <div class="tab-pane fade show" id="fe-manager" role="tabpanel" >
+                        Front End Manager
+                    </div>
+
                     <div class="tab-pane fade show" id="pkm-pvp" role="tabpanel" >
-
                         PKM PVP
-
                     </div>
 
                     <div class="tab-pane fade show" id="pkm-pve" role="tabpanel" >
-
                         <table class="table table-sm table-bordered " style="margin: 0 auto; width: 100%; text-align: center;" >
                             <thead>
                                 <tr style="padding: 5px; text-align: left">
@@ -475,7 +481,6 @@
                                 </td>
                             </tr>
                         </table>
-
                     </div>
                 </div>
 
